[build-system]
requires = [
    "setuptools>= 61.0.0",
    "setuptools_scm[toml]>=7.0",
]

build-backend = "setuptools.build_meta"

[project]
name = "doorstop"
dynamic = ["version"]
#version = "3.0.2"
description = "Requirements management using version control."

license = "LGPL-3.0-or-later"

authors = [
  {name = "Jace Browning"},
  {email = "jacebrowning@gmail.com"},
]

readme = "README.md"
#exclude = ["**/tests/**"]

keywords = [
  "requirements-management",
  "version-control",
  "documentation",
  "traceability",
  "markdown",
  "certification",
  "html",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Editors :: Documentation",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "legacy-cgi",
    "munch[yaml]",
    "markdown>=3.3.3",
    "bottle~=0.12.25",
    "requests>=2.0",
    "python-frontmatter==1.0",
    "python-markdown-math~=0.6",
    "plantuml-markdown==3.4.2",
    "six",
    "openpyxl>=3.1.2",
    "verchew==3.4.2",
]

requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "isort == 5.12",
    "mypy >= 1.1.1",
    "black == 24.3",
    "pylint ~= 3.2.0",
    "pydocstyle",
]
cov = [
    "coverage[toml]",
    "coverage_python_version",
]
test = [
    "pytest == 6.2.5",
    "pytest-cov",
    "pytest-expecter",
    "pytest-sugar",
    "WebTest == 3.0.0",
]

[project.scripts]
doorstop = "doorstop.cli.main:main"
doorstop-gui = "doorstop.gui.main:main"
doorstop-server = "doorstop.server.main:main"

[project.urls]
Homepage = "https://pypi.org/project/Doorstop"
Documentation = "https://doorstop.readthedocs.io"
Repository = "https://github.com/doorstop-dev/doorstop"

# this finds all the pkgs when not using src/ layout
[tool.setuptools.package-dir]
doorstop = "doorstop"

# this includes all the package data files
[tool.setuptools.package-data]
"*" = [
    "*.cls",
    "*.css",
    "*.js",
    "*.png",
    "*.rst",
    "*.txt",
    "*.tpl",
    "*.woff",
    "*.yml",
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["**/tests/**"]
norecursedirs = ["reqs/*", "build/*"]
log_cli =  false
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
addopts = "-ra -q -p no:warnings"

[tool.coverage.run]
branch = true
source = ["doorstop"]
plugins = ["coverage_python_version"]
omit = [
    "scent.py",
    ".tox",
    ".venv",
]
[tool.coverage.paths]
source = ["doorstop"]

[tool.coverage.report]
fail_under = 75
show_missing = true
ignore_errors = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "except DistributionNotFound",
]
[tool.coverage.html]
show_contexts = true

[tool.black]
quiet = true

[tool.isort]
profile = "black"
